# services/api/openapi.json
@@ -174,6 +174,7 @@
             "required": false,
             "schema": {
               "default": "30d",
+              "pattern": "^[1-9]\\d{0,3}[dw]$",
               "title": "Period",
               "type": "string"
             }
@@ -184,6 +185,11 @@
             "required": false,
             "schema": {
               "default": "day",
+              "enum": [
+                "day",
+                "week",
+                "month"
+              ],
               "title": "Bucket",
               "type": "string"
             }
